// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceNotifications Component renders correctly 1`] = `
.emotion-0 {
  margin-bottom: 8px;
  padding-bottom: 12px;
  padding-top: 12px;
}

.emotion-0.red,
.emotion-0.green {
  color: rgba(10, 10, 11, 0.78);
}

.emotion-0.bordered {
  border: 1px solid #e9e9e9;
  background: #cfcfcf15;
}

.emotion-0.bordered.red {
  border-color: #ab1000;
  background: rgba(93, 15, 67, 0.075);
}

.emotion-0>span {
  margin-right: 16px;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-1 iconButton {
  margin-right: 8px;
}

.emotion-2 {
  margin-left: 4px;
  margin-right: 4px;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
  margin-bottom: -4px;
}

.emotion-4 iconButton {
  margin-right: 8px;
}

<div>
  <div
    class="flexbox center-aligned padding-small emotion-0 bordered   clickable"
  >
    <span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red emotion-1"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
    </span>
    <div
      class="flexbox center-aligned"
    >
      1
       
      service
       reported issues. View details in the 
      <a
        class="emotion-2"
      >
        monitoring section
      </a>
       below
      <a
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-4"
          data-testid="ArrowDropDownCircleOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4c4.41 0 8 3.59 8 8s-3.59 8-8 8-8-3.59-8-8 3.59-8 8-8m0-2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 13-4-4h8z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;

exports[`tiny components renders DeviceOfflineHeaderNotification correctly 1`] = `
.emotion-0 {
  margin-bottom: 8px;
  padding-bottom: 12px;
  padding-top: 12px;
}

.emotion-0.red,
.emotion-0.green {
  color: rgba(10, 10, 11, 0.78);
}

.emotion-0.bordered {
  border: 1px solid #e9e9e9;
  background: #cfcfcf15;
}

.emotion-0.bordered.red {
  border-color: #ab1000;
  background: rgba(93, 15, 67, 0.075);
}

.emotion-0>span {
  margin-right: 16px;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-1 iconButton {
  margin-right: 8px;
}

<div>
  <div
    class="flexbox center-aligned padding-small emotion-0  red column-data "
  >
    <span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red emotion-1"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
    </span>
    <div
      class="flexbox center-aligned"
    >
      <div
        class="key muted margin-right-small"
      >
        <b>
          Device offline
        </b>
      </div>
      Last check-in over 
      24
       
      hours
       ago
    </div>
  </div>
</div>
`;

exports[`tiny components renders LastConnection correctly 1`] = `
.emotion-0 {
  margin-bottom: 8px;
  padding-bottom: 12px;
  padding-top: 12px;
}

.emotion-0.red,
.emotion-0.green {
  color: rgba(10, 10, 11, 0.78);
}

.emotion-0.bordered {
  border: 1px solid #e9e9e9;
  background: #cfcfcf15;
}

.emotion-0.bordered.red {
  border-color: #ab1000;
  background: rgba(93, 15, 67, 0.075);
}

.emotion-0>span {
  margin-right: 16px;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-1 iconButton {
  margin-right: 8px;
}

.emotion-2 {
  margin-left: 4px;
  margin-right: 4px;
}

<div>
  <div
    class="flexbox center-aligned padding-small emotion-0 bordered red  "
  >
    <span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red emotion-1"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
    </span>
    <div
      class="flexbox center-aligned"
    >
      Device has not connected to the server since 
      <time
        class="emotion-2"
        datetime="2019-01-01T10:25:00+00:00"
      >
        2019-01-01 10:25
      </time>
    </div>
  </div>
</div>
`;

exports[`tiny components renders NoAlertsHeaderNotification correctly 1`] = `
.emotion-0 {
  margin-bottom: 8px;
  padding-bottom: 12px;
  padding-top: 12px;
}

.emotion-0.red,
.emotion-0.green {
  color: rgba(10, 10, 11, 0.78);
}

.emotion-0.bordered {
  border: 1px solid #e9e9e9;
  background: #cfcfcf15;
}

.emotion-0.bordered.red {
  border-color: #ab1000;
  background: rgba(93, 15, 67, 0.075);
}

.emotion-0>span {
  margin-right: 16px;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-1 iconButton {
  margin-right: 8px;
}

<div>
  <div
    class="flexbox center-aligned padding-small emotion-0    "
  >
    <span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium green emotion-1"
        data-testid="CheckCircleIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m-2 15-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8z"
        />
      </svg>
    </span>
    <div
      class="flexbox center-aligned"
    >
      No reported issues
    </div>
  </div>
</div>
`;

exports[`tiny components renders ServiceNotification correctly 1`] = `
.emotion-0 {
  margin-bottom: 8px;
  padding-bottom: 12px;
  padding-top: 12px;
}

.emotion-0.red,
.emotion-0.green {
  color: rgba(10, 10, 11, 0.78);
}

.emotion-0.bordered {
  border: 1px solid #e9e9e9;
  background: #cfcfcf15;
}

.emotion-0.bordered.red {
  border-color: #ab1000;
  background: rgba(93, 15, 67, 0.075);
}

.emotion-0>span {
  margin-right: 16px;
}

.emotion-1 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.3929rem;
}

.emotion-1 iconButton {
  margin-right: 8px;
}

.emotion-2 {
  margin-left: 4px;
  margin-right: 4px;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.1607rem;
  margin-bottom: -4px;
}

.emotion-4 iconButton {
  margin-right: 8px;
}

<div>
  <div
    class="flexbox center-aligned padding-small emotion-0 bordered   clickable"
  >
    <span>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium red emotion-1"
        data-testid="ErrorIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m1 15h-2v-2h2zm0-4h-2V7h2z"
        />
      </svg>
    </span>
    <div
      class="flexbox center-aligned"
    >
      2
       
      services
       reported issues. View details in the 
      <a
        class="emotion-2"
      >
        monitoring section
      </a>
       below
      <a
        class="emotion-2"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall emotion-4"
          data-testid="ArrowDropDownCircleOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4c4.41 0 8 3.59 8 8s-3.59 8-8 8-8-3.59-8-8 3.59-8 8-8m0-2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 13-4-4h8z"
          />
        </svg>
      </a>
    </div>
  </div>
</div>
`;
